# Sentiment-Analysis

./: Analyzer.cpp  Analyzer.h  CMakeLists.txt  DSString.cpp  DSString.h  README.md  Tweet.cpp  Tweet.h  catch.h  main.cpp  output01.txt  sample_training_1000.csv  sample_training_50.csv  small_sample_test_data.csv  small_sample_test_sentiment.csv  small_sample_train.csv  tests.cpp
